[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/models/pool/pool.glb" type="PackedScene" id=1]
[ext_resource path="res://scenes/water.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/delivery_area.gd" type="Script" id=3]
[ext_resource path="res://scripts/level.gd" type="Script" id=4]
[ext_resource path="res://scripts/delivery_object.gd" type="Script" id=5]

[sub_resource type="ConcavePolygonShape" id=1]
data = PoolVector3Array( -1, 0, 1, -0.7778, 0, 0.7778, -0.7778, 0, 1, -1, 0, 1, -1, 0, 0.7778, -0.7778, 0, 0.7778, -0.7778, 0, 1, -0.5556, 0, 0.7778, -0.5556, 0, 1, -0.7778, 0, 1, -0.7778, 0, 0.7778, -0.5556, 0, 0.7778, -0.5556, 0, 1, -0.3333, 0, 0.7778, -0.3333, 0, 1, -0.5556, 0, 1, -0.5556, 0, 0.7778, -0.3333, 0, 0.7778, -0.3333, 0, 1, -0.1111, 0, 0.7778, -0.1111, 0, 1, -0.3333, 0, 1, -0.3333, 0, 0.7778, -0.1111, 0, 0.7778, -0.1111, 0, 1, 0.1111, 0, 0.7778, 0.1111, 0, 1, -0.1111, 0, 1, -0.1111, 0, 0.7778, 0.1111, 0, 0.7778, 0.1111, 0, 1, 0.3333, 0, 0.7778, 0.3333, 0, 1, 0.1111, 0, 1, 0.1111, 0, 0.7778, 0.3333, 0, 0.7778, 0.3333, 0, 1, 0.5556, 0, 0.7778, 0.5556, 0, 1, 0.3333, 0, 1, 0.3333, 0, 0.7778, 0.5556, 0, 0.7778, 0.5556, 0, 1, 0.7778, 0, 0.7778, 0.7778, 0, 1, 0.5556, 0, 1, 0.5556, 0, 0.7778, 0.7778, 0, 0.7778, 0.7778, 0, 1, 1, 0, 0.7778, 1, 0, 1, 0.7778, 0, 1, 0.7778, 0, 0.7778, 1, 0, 0.7778, -1, 0, 0.7778, -0.7778, 0, 0.5556, -0.7778, 0, 0.7778, -1, 0, 0.7778, -1, 0, 0.5556, -0.7778, 0, 0.5556, -0.7778, 0, 0.7778, -0.5556, 0, 0.5556, -0.5556, 0, 0.7778, -0.7778, 0, 0.7778, -0.7778, 0, 0.5556, -0.5556, 0, 0.5556, -0.5556, 0, 0.7778, -0.3333, 0, 0.5556, -0.3333, 0, 0.7778, -0.5556, 0, 0.7778, -0.5556, 0, 0.5556, -0.3333, 0, 0.5556, -0.3333, 0, 0.7778, -0.1111, 0, 0.5556, -0.1111, 0, 0.7778, -0.3333, 0, 0.7778, -0.3333, 0, 0.5556, -0.1111, 0, 0.5556, -0.1111, 0, 0.7778, 0.1111, 0, 0.5556, 0.1111, 0, 0.7778, -0.1111, 0, 0.7778, -0.1111, 0, 0.5556, 0.1111, 0, 0.5556, 0.1111, 0, 0.7778, 0.3333, 0, 0.5556, 0.3333, 0, 0.7778, 0.1111, 0, 0.7778, 0.1111, 0, 0.5556, 0.3333, 0, 0.5556, 0.3333, 0, 0.7778, 0.5556, 0, 0.5556, 0.5556, 0, 0.7778, 0.3333, 0, 0.7778, 0.3333, 0, 0.5556, 0.5556, 0, 0.5556, 0.5556, 0, 0.7778, 0.7778, 0, 0.5556, 0.7778, 0, 0.7778, 0.5556, 0, 0.7778, 0.5556, 0, 0.5556, 0.7778, 0, 0.5556, 0.7778, 0, 0.7778, 1, 0, 0.5556, 1, 0, 0.7778, 0.7778, 0, 0.7778, 0.7778, 0, 0.5556, 1, 0, 0.5556, -1, 0, 0.5556, -0.7778, 0, 0.3333, -0.7778, 0, 0.5556, -1, 0, 0.5556, -1, 0, 0.3333, -0.7778, 0, 0.3333, -0.7778, 0, 0.5556, -0.5556, 0, 0.3333, -0.5556, 0, 0.5556, -0.7778, 0, 0.5556, -0.7778, 0, 0.3333, -0.5556, 0, 0.3333, 0.5556, 0, 0.5556, 0.7778, 0, 0.3333, 0.7778, 0, 0.5556, 0.5556, 0, 0.5556, 0.5556, 0, 0.3333, 0.7778, 0, 0.3333, 0.7778, 0, 0.5556, 1, 0, 0.3333, 1, 0, 0.5556, 0.7778, 0, 0.5556, 0.7778, 0, 0.3333, 1, 0, 0.3333, -1, 0, 0.3333, -0.7778, 0, 0.1111, -0.7778, 0, 0.3333, -1, 0, 0.3333, -1, 0, 0.1111, -0.7778, 0, 0.1111, -0.7778, 0, 0.3333, -0.5556, 0, 0.1111, -0.5556, 0, 0.3333, -0.7778, 0, 0.3333, -0.7778, 0, 0.1111, -0.5556, 0, 0.1111, -0.1111, 0, 0.5556, 0.1111, -0.3019, 0.5556, 0.1111, 0, 0.5556, -0.1111, 0, 0.5556, -0.1111, -0.3019, 0.5556, 0.1111, -0.3019, 0.5556, 0.5556, 0, 0.5556, 0.5556, -0.3019, 0.3333, 0.5556, 0, 0.3333, 0.5556, 0, 0.5556, 0.5556, -0.3019, 0.5556, 0.5556, -0.3019, 0.3333, 0.5556, 0, 0.3333, 0.7778, 0, 0.1111, 0.7778, 0, 0.3333, 0.5556, 0, 0.3333, 0.5556, 0, 0.1111, 0.7778, 0, 0.1111, 0.7778, 0, 0.3333, 1, 0, 0.1111, 1, 0, 0.3333, 0.7778, 0, 0.3333, 0.7778, 0, 0.1111, 1, 0, 0.1111, -1, 0, 0.1111, -0.7778, 0, -0.1111, -0.7778, 0, 0.1111, -1, 0, 0.1111, -1, 0, -0.1111, -0.7778, 0, -0.1111, -0.7778, 0, 0.1111, -0.5556, 0, -0.1111, -0.5556, 0, 0.1111, -0.7778, 0, 0.1111, -0.7778, 0, -0.1111, -0.5556, 0, -0.1111, 0.5556, 0, -1.2591, 0.3333, -0.1633, -1.2591, 0.3333, 0, -1.2591, 0.5556, 0, -1.2591, 0.5556, -0.1633, -1.2591, 0.3333, -0.1633, -1.2591, -0.5556, 0, -0.5556, -0.5556, -0.3019, -0.3333, -0.5556, 0, -0.3333, -0.5556, 0, -0.5556, -0.5556, -0.3019, -0.5556, -0.5556, -0.3019, -0.3333, -0.3333, 0, -1.2591, -0.5556, -0.1633, -1.2591, -0.5556, 0, -1.2591, -0.3333, 0, -1.2591, -0.3333, -0.1633, -1.2591, -0.5556, -0.1633, -1.2591, 0.5556, 0, -0.5556, 0.5556, -0.1633, -1.2591, 0.5556, 0, -1.2591, 0.5556, 0, -0.5556, 0.5556, -0.3019, -0.5556, 0.5556, -0.1633, -1.2591, -0.5556, 0, -0.1111, -0.5556, -0.3019, 0.1111, -0.5556, 0, 0.1111, -0.5556, 0, -0.1111, -0.5556, -0.3019, -0.1111, -0.5556, -0.3019, 0.1111, 0.5556, 0, 0.1111, 0.7778, 0, -0.1111, 0.7778, 0, 0.1111, 0.5556, 0, 0.1111, 0.5556, 0, -0.1111, 0.7778, 0, -0.1111, 0.7778, 0, 0.1111, 1, 0, -0.1111, 1, 0, 0.1111, 0.7778, 0, 0.1111, 0.7778, 0, -0.1111, 1, 0, -0.1111, -1, 0, -0.1111, -0.7778, 0, -0.3333, -0.7778, 0, -0.1111, -1, 0, -0.1111, -1, 0, -0.3333, -0.7778, 0, -0.3333, -0.7778, 0, -0.1111, -0.5556, 0, -0.3333, -0.5556, 0, -0.1111, -0.7778, 0, -0.1111, -0.7778, 0, -0.3333, -0.5556, 0, -0.3333, -0.3333, 0, 0.5556, -0.1111, -0.3019, 0.5556, -0.1111, 0, 0.5556, -0.3333, 0, 0.5556, -0.3333, -0.3019, 0.5556, -0.1111, -0.3019, 0.5556, 0.5556, 0, -0.1111, 0.5556, -0.3019, -0.3333, 0.5556, 0, -0.3333, 0.5556, 0, -0.1111, 0.5556, -0.3019, -0.1111, 0.5556, -0.3019, -0.3333, 0.3333, 0, -1.2591, 0.1111, -0.1633, -1.2591, 0.1111, 0, -1.2591, 0.3333, 0, -1.2591, 0.3333, -0.1633, -1.2591, 0.1111, -0.1633, -1.2591, -0.5556, 0, 0.3333, -0.5556, -0.3019, 0.5556, -0.5556, 0, 0.5556, -0.5556, 0, 0.3333, -0.5556, -0.3019, 0.3333, -0.5556, -0.3019, 0.5556, 0.5556, 0, 0.3333, 0.5556, -0.3019, 0.1111, 0.5556, 0, 0.1111, 0.5556, 0, 0.3333, 0.5556, -0.3019, 0.3333, 0.5556, -0.3019, 0.1111, 0.5556, 0, -0.1111, 0.7778, 0, -0.3333, 0.7778, 0, -0.1111, 0.5556, 0, -0.1111, 0.5556, 0, -0.3333, 0.7778, 0, -0.3333, 0.7778, 0, -0.1111, 1, 0, -0.3333, 1, 0, -0.1111, 0.7778, 0, -0.1111, 0.7778, 0, -0.3333, 1, 0, -0.3333, -1, 0, -0.3333, -0.7778, 0, -0.5556, -0.7778, 0, -0.3333, -1, 0, -0.3333, -1, 0, -0.5556, -0.7778, 0, -0.5556, -0.7778, 0, -0.3333, -0.5556, 0, -0.5556, -0.5556, 0, -0.3333, -0.7778, 0, -0.3333, -0.7778, 0, -0.5556, -0.5556, 0, -0.5556, 0.3333, 0, 0.5556, 0.5556, -0.3019, 0.5556, 0.5556, 0, 0.5556, 0.3333, 0, 0.5556, 0.3333, -0.3019, 0.5556, 0.5556, -0.3019, 0.5556, -0.5556, 0, 0.5556, -0.3333, -0.3019, 0.5556, -0.3333, 0, 0.5556, -0.5556, 0, 0.5556, -0.5556, -0.3019, 0.5556, -0.3333, -0.3019, 0.5556, -0.5556, 0, -1.2591, -0.5556, -0.3019, -0.5556, -0.5556, 0, -0.5556, -0.5556, 0, -1.2591, -0.5556, -0.1633, -1.2591, -0.5556, -0.3019, -0.5556, 0.1111, 0, -1.2591, -0.1111, -0.1633, -1.2591, -0.1111, 0, -1.2591, 0.1111, 0, -1.2591, 0.1111, -0.1633, -1.2591, -0.1111, -0.1633, -1.2591, -0.5556, 0, -0.3333, -0.5556, -0.3019, -0.1111, -0.5556, 0, -0.1111, -0.5556, 0, -0.3333, -0.5556, -0.3019, -0.3333, -0.5556, -0.3019, -0.1111, 0.5556, 0, -0.3333, 0.7778, 0, -0.5556, 0.7778, 0, -0.3333, 0.5556, 0, -0.3333, 0.5556, 0, -0.5556, 0.7778, 0, -0.5556, 0.7778, 0, -0.3333, 1, 0, -0.5556, 1, 0, -0.3333, 0.7778, 0, -0.3333, 0.7778, 0, -0.5556, 1, 0, -0.5556, -1, 0, -0.5556, -0.7778, 0, -1.2591, -0.7778, 0, -0.5556, -1, 0, -0.5556, -1, 0, -1.2591, -0.7778, 0, -1.2591, -0.7778, 0, -0.5556, -0.5556, 0, -1.2591, -0.5556, 0, -0.5556, -0.7778, 0, -0.5556, -0.7778, 0, -1.2591, -0.5556, 0, -1.2591, 0.1111, 0, 0.5556, 0.3333, -0.3019, 0.5556, 0.3333, 0, 0.5556, 0.1111, 0, 0.5556, 0.1111, -0.3019, 0.5556, 0.3333, -0.3019, 0.5556, 0.5556, 0, -0.3333, 0.5556, -0.3019, -0.5556, 0.5556, 0, -0.5556, 0.5556, 0, -0.3333, 0.5556, -0.3019, -0.3333, 0.5556, -0.3019, -0.5556, -0.5556, 0, 0.1111, -0.5556, -0.3019, 0.3333, -0.5556, 0, 0.3333, -0.5556, 0, 0.1111, -0.5556, -0.3019, 0.1111, -0.5556, -0.3019, 0.3333, -0.1111, 0, -1.2591, -0.3333, -0.1633, -1.2591, -0.3333, 0, -1.2591, -0.1111, 0, -1.2591, -0.1111, -0.1633, -1.2591, -0.3333, -0.1633, -1.2591, 0.5556, 0, 0.1111, 0.5556, -0.3019, -0.1111, 0.5556, 0, -0.1111, 0.5556, 0, 0.1111, 0.5556, -0.3019, 0.1111, 0.5556, -0.3019, -0.1111, 0.5556, 0, -0.5556, 0.7778, 0, -1.2591, 0.7778, 0, -0.5556, 0.5556, 0, -0.5556, 0.5556, 0, -1.2591, 0.7778, 0, -1.2591, 0.7778, 0, -0.5556, 1, 0, -1.2591, 1, 0, -0.5556, 0.7778, 0, -0.5556, 0.7778, 0, -1.2591, 1, 0, -1.2591, -1, 0, -1.2591, -0.7778, 0, -1.4813, -0.7778, 0, -1.2591, -1, 0, -1.2591, -1, 0, -1.4813, -0.7778, 0, -1.4813, -0.7778, 0, -1.2591, -0.5556, 0, -1.4813, -0.5556, 0, -1.2591, -0.7778, 0, -1.2591, -0.7778, 0, -1.4813, -0.5556, 0, -1.4813, -0.5556, 0, -1.2591, -0.3333, 0, -1.4813, -0.3333, 0, -1.2591, -0.5556, 0, -1.2591, -0.5556, 0, -1.4813, -0.3333, 0, -1.4813, -0.3333, 0, -1.2591, -0.1111, 0, -1.4813, -0.1111, 0, -1.2591, -0.3333, 0, -1.2591, -0.3333, 0, -1.4813, -0.1111, 0, -1.4813, -0.1111, 0, -1.2591, 0.1111, 0, -1.4813, 0.1111, 0, -1.2591, -0.1111, 0, -1.2591, -0.1111, 0, -1.4813, 0.1111, 0, -1.4813, 0.1111, 0, -1.2591, 0.3333, 0, -1.4813, 0.3333, 0, -1.2591, 0.1111, 0, -1.2591, 0.1111, 0, -1.4813, 0.3333, 0, -1.4813, 0.3333, 0, -1.2591, 0.5556, 0, -1.4813, 0.5556, 0, -1.2591, 0.3333, 0, -1.2591, 0.3333, 0, -1.4813, 0.5556, 0, -1.4813, 0.5556, 0, -1.2591, 0.7778, 0, -1.4813, 0.7778, 0, -1.2591, 0.5556, 0, -1.2591, 0.5556, 0, -1.4813, 0.7778, 0, -1.4813, 0.7778, 0, -1.2591, 1, 0, -1.4813, 1, 0, -1.2591, 0.7778, 0, -1.2591, 0.7778, 0, -1.4813, 1, 0, -1.4813, -0.5556, -0.3019, 0.5556, -0.3333, -0.3019, 0.3333, -0.3333, -0.3019, 0.5556, -0.5556, -0.3019, 0.5556, -0.5556, -0.3019, 0.3333, -0.3333, -0.3019, 0.3333, -0.3333, -0.3019, 0.5556, -0.1111, -0.3019, 0.3333, -0.1111, -0.3019, 0.5556, -0.3333, -0.3019, 0.5556, -0.3333, -0.3019, 0.3333, -0.1111, -0.3019, 0.3333, -0.1111, -0.3019, 0.5556, 0.1111, -0.3019, 0.3333, 0.1111, -0.3019, 0.5556, -0.1111, -0.3019, 0.5556, -0.1111, -0.3019, 0.3333, 0.1111, -0.3019, 0.3333, 0.1111, -0.3019, 0.5556, 0.3333, -0.3019, 0.3333, 0.3333, -0.3019, 0.5556, 0.1111, -0.3019, 0.5556, 0.1111, -0.3019, 0.3333, 0.3333, -0.3019, 0.3333, 0.3333, -0.3019, 0.5556, 0.5556, -0.3019, 0.3333, 0.5556, -0.3019, 0.5556, 0.3333, -0.3019, 0.5556, 0.3333, -0.3019, 0.3333, 0.5556, -0.3019, 0.3333, -0.5556, -0.3019, 0.3333, -0.3333, -0.3019, 0.1111, -0.3333, -0.3019, 0.3333, -0.5556, -0.3019, 0.3333, -0.5556, -0.3019, 0.1111, -0.3333, -0.3019, 0.1111, -0.3333, -0.3019, 0.3333, -0.1111, -0.3019, 0.1111, -0.1111, -0.3019, 0.3333, -0.3333, -0.3019, 0.3333, -0.3333, -0.3019, 0.1111, -0.1111, -0.3019, 0.1111, -0.1111, -0.3019, 0.3333, 0.1111, -0.3019, 0.1111, 0.1111, -0.3019, 0.3333, -0.1111, -0.3019, 0.3333, -0.1111, -0.3019, 0.1111, 0.1111, -0.3019, 0.1111, 0.1111, -0.3019, 0.3333, 0.3333, -0.3019, 0.1111, 0.3333, -0.3019, 0.3333, 0.1111, -0.3019, 0.3333, 0.1111, -0.3019, 0.1111, 0.3333, -0.3019, 0.1111, 0.3333, -0.3019, 0.3333, 0.5556, -0.3019, 0.1111, 0.5556, -0.3019, 0.3333, 0.3333, -0.3019, 0.3333, 0.3333, -0.3019, 0.1111, 0.5556, -0.3019, 0.1111, -0.5556, -0.3019, 0.1111, -0.3333, -0.3019, -0.1111, -0.3333, -0.3019, 0.1111, -0.5556, -0.3019, 0.1111, -0.5556, -0.3019, -0.1111, -0.3333, -0.3019, -0.1111, -0.3333, -0.3019, 0.1111, -0.1111, -0.3019, -0.1111, -0.1111, -0.3019, 0.1111, -0.3333, -0.3019, 0.1111, -0.3333, -0.3019, -0.1111, -0.1111, -0.3019, -0.1111, -0.1111, -0.3019, 0.1111, 0.1111, -0.3019, -0.1111, 0.1111, -0.3019, 0.1111, -0.1111, -0.3019, 0.1111, -0.1111, -0.3019, -0.1111, 0.1111, -0.3019, -0.1111, 0.1111, -0.3019, 0.1111, 0.3333, -0.3019, -0.1111, 0.3333, -0.3019, 0.1111, 0.1111, -0.3019, 0.1111, 0.1111, -0.3019, -0.1111, 0.3333, -0.3019, -0.1111, 0.3333, -0.3019, 0.1111, 0.5556, -0.3019, -0.1111, 0.5556, -0.3019, 0.1111, 0.3333, -0.3019, 0.1111, 0.3333, -0.3019, -0.1111, 0.5556, -0.3019, -0.1111, -0.5556, -0.3019, -0.1111, -0.3333, -0.3019, -0.3333, -0.3333, -0.3019, -0.1111, -0.5556, -0.3019, -0.1111, -0.5556, -0.3019, -0.3333, -0.3333, -0.3019, -0.3333, -0.3333, -0.3019, -0.1111, -0.1111, -0.3019, -0.3333, -0.1111, -0.3019, -0.1111, -0.3333, -0.3019, -0.1111, -0.3333, -0.3019, -0.3333, -0.1111, -0.3019, -0.3333, -0.1111, -0.3019, -0.1111, 0.1111, -0.3019, -0.3333, 0.1111, -0.3019, -0.1111, -0.1111, -0.3019, -0.1111, -0.1111, -0.3019, -0.3333, 0.1111, -0.3019, -0.3333, 0.1111, -0.3019, -0.1111, 0.3333, -0.3019, -0.3333, 0.3333, -0.3019, -0.1111, 0.1111, -0.3019, -0.1111, 0.1111, -0.3019, -0.3333, 0.3333, -0.3019, -0.3333, 0.3333, -0.3019, -0.1111, 0.5556, -0.3019, -0.3333, 0.5556, -0.3019, -0.1111, 0.3333, -0.3019, -0.1111, 0.3333, -0.3019, -0.3333, 0.5556, -0.3019, -0.3333, -0.5556, -0.3019, -0.3333, -0.3333, -0.3019, -0.5556, -0.3333, -0.3019, -0.3333, -0.5556, -0.3019, -0.3333, -0.5556, -0.3019, -0.5556, -0.3333, -0.3019, -0.5556, -0.3333, -0.3019, -0.3333, -0.1111, -0.3019, -0.5556, -0.1111, -0.3019, -0.3333, -0.3333, -0.3019, -0.3333, -0.3333, -0.3019, -0.5556, -0.1111, -0.3019, -0.5556, -0.1111, -0.3019, -0.3333, 0.1111, -0.3019, -0.5556, 0.1111, -0.3019, -0.3333, -0.1111, -0.3019, -0.3333, -0.1111, -0.3019, -0.5556, 0.1111, -0.3019, -0.5556, 0.1111, -0.3019, -0.3333, 0.3333, -0.3019, -0.5556, 0.3333, -0.3019, -0.3333, 0.1111, -0.3019, -0.3333, 0.1111, -0.3019, -0.5556, 0.3333, -0.3019, -0.5556, 0.3333, -0.3019, -0.3333, 0.5556, -0.3019, -0.5556, 0.5556, -0.3019, -0.3333, 0.3333, -0.3019, -0.3333, 0.3333, -0.3019, -0.5556, 0.5556, -0.3019, -0.5556, -0.5556, -0.3019, -0.5556, -0.3333, -0.1633, -1.2591, -0.3333, -0.3019, -0.5556, -0.5556, -0.3019, -0.5556, -0.5556, -0.1633, -1.2591, -0.3333, -0.1633, -1.2591, -0.3333, -0.3019, -0.5556, -0.1111, -0.1633, -1.2591, -0.1111, -0.3019, -0.5556, -0.3333, -0.3019, -0.5556, -0.3333, -0.1633, -1.2591, -0.1111, -0.1633, -1.2591, -0.1111, -0.3019, -0.5556, 0.1111, -0.1633, -1.2591, 0.1111, -0.3019, -0.5556, -0.1111, -0.3019, -0.5556, -0.1111, -0.1633, -1.2591, 0.1111, -0.1633, -1.2591, 0.1111, -0.3019, -0.5556, 0.3333, -0.1633, -1.2591, 0.3333, -0.3019, -0.5556, 0.1111, -0.3019, -0.5556, 0.1111, -0.1633, -1.2591, 0.3333, -0.1633, -1.2591, 0.3333, -0.3019, -0.5556, 0.5556, -0.1633, -1.2591, 0.5556, -0.3019, -0.5556, 0.3333, -0.3019, -0.5556, 0.3333, -0.1633, -1.2591, 0.5556, -0.1633, -1.2591, -0.3333, 0, -1.4813, -0.1111, 0, -1.7439, -0.1111, 0, -1.4813, -0.3333, 0, -1.4813, -0.3333, 0, -1.7439, -0.1111, 0, -1.7439, 0.1111, 0, -1.4813, 0.3333, 0, -1.7439, 0.3333, 0, -1.4813, 0.1111, 0, -1.4813, 0.1111, 0, -1.7439, 0.3333, 0, -1.7439, -1, 0, -1.4813, -0.7778, 0, -1.7439, -0.7778, 0, -1.4813, -1, 0, -1.4813, -1, 0, -1.7439, -0.7778, 0, -1.7439, 0.5556, 0, -1.4813, 0.7778, 0, -1.7439, 0.7778, 0, -1.4813, 0.5556, 0, -1.4813, 0.5556, 0, -1.7439, 0.7778, 0, -1.7439, -0.5556, 0, -1.4813, -0.3333, 0, -1.7439, -0.3333, 0, -1.4813, -0.5556, 0, -1.4813, -0.5556, 0, -1.7439, -0.3333, 0, -1.7439, -0.1111, 0, -1.4813, 0.1111, 0, -1.7439, 0.1111, 0, -1.4813, -0.1111, 0, -1.4813, -0.1111, 0, -1.7439, 0.1111, 0, -1.7439, 0.3333, 0, -1.4813, 0.5556, 0, -1.7439, 0.5556, 0, -1.4813, 0.3333, 0, -1.4813, 0.3333, 0, -1.7439, 0.5556, 0, -1.7439, -0.7778, 0, -1.4813, -0.5556, 0, -1.7439, -0.5556, 0, -1.4813, -0.7778, 0, -1.4813, -0.7778, 0, -1.7439, -0.5556, 0, -1.7439, 0.7778, 0, -1.4813, 1, 0, -1.7439, 1, 0, -1.4813, 0.7778, 0, -1.4813, 0.7778, 0, -1.7439, 1, 0, -1.7439 )

[sub_resource type="CylinderMesh" id=2]
top_radius = 0.2
bottom_radius = 0.2
height = 0.5

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CylinderShape" id=3]
radius = 0.2
height = 0.5

[sub_resource type="CubeMesh" id=5]
size = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.25, 0.25, 0.25 )

[sub_resource type="SphereMesh" id=7]
radius = 0.25
height = 0.5

[sub_resource type="SphereShape" id=8]
radius = 0.25

[sub_resource type="BoxShape" id=9]
extents = Vector3( 4, 1, 4 )

[sub_resource type="CubeMesh" id=10]
flip_faces = true
size = Vector3( 8, 2, 8 )

[node name="pool" instance=ExtResource( 1 )]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 5, 0 )
script = ExtResource( 4 )

[node name="water" parent="." index="0" instance=ExtResource( 2 )]
transform = Transform( 128, 0, 0, 0, 128, 0, 0, 0, 128, 0, 6.317, -48 )

[node name="sun" type="DirectionalLight" parent="." index="1"]
transform = Transform( 4, 0, 0, 0, 2.46193, 3.1526, 0, -3.1526, 2.46193, 0, 33.518, -56 )
shadow_enabled = true

[node name="StaticBody" type="StaticBody" parent="." index="2"]
transform = Transform( 139.193, 0, 0, 0, 139.193, 0, 0, 0, 139.193, 0, 15.8045, 0 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody" index="0"]
shape = SubResource( 1 )

[node name="Light" parent="." index="3"]
transform = Transform( -0.290865, 0.566393, 0.771101, -0.0551891, 0.794672, -0.604525, -0.955171, -0.218391, -0.199883, 4.07625, 21.7084, -1.00545 )
visible = false

[node name="Camera" parent="." index="4"]
transform = Transform( 0.685921, 0.651558, 0.324014, 0, 0.445271, -0.895396, -0.727676, 0.61417, 0.305421, 7.35889, 20.7628, 6.92579 )
visible = false

[node name="Grid" parent="." index="5"]
transform = Transform( 139.193, 0, 0, 0, 139.193, 0, 0, 0, 139.193, 0, 15.8045, 0 )

[node name="Sun" parent="." index="6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15.8045, 0 )
visible = false

[node name="Cylinder" type="RigidBody" parent="." index="7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.036819, -25.8965, 5.20185 )
collision_layer = 2
script = ExtResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="Cylinder" index="0"]
mesh = SubResource( 2 )
material/0 = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Cylinder" index="1"]
shape = SubResource( 3 )

[node name="Cube" type="RigidBody" parent="." index="8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.54335, -25.8965, 4.23661 )
collision_layer = 2
script = ExtResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="Cube" index="0"]
mesh = SubResource( 5 )
material/0 = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Cube" index="1"]
shape = SubResource( 6 )

[node name="Sphere" type="RigidBody" parent="." index="9"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.97819, -25.8965, 2.41858 )
collision_layer = 2
script = ExtResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="Sphere" index="0"]
mesh = SubResource( 7 )
material/0 = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Sphere" index="1"]
shape = SubResource( 8 )

[node name="DeliveryArea" type="Area" parent="." index="10" groups=["delivery_objects"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -24 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="DeliveryArea" index="0"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="DeliveryArea" index="1"]
mesh = SubResource( 10 )
material/0 = null

[connection signal="body_entered" from="DeliveryArea" to="DeliveryArea" method="_on_body_entered"]
[connection signal="body_exited" from="DeliveryArea" to="DeliveryArea" method="_on_body_exited"]
[connection signal="objects_changed" from="DeliveryArea" to="." method="_on_DeliveryArea_objects_changed"]
